Adição de inglês-en

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,10 @@
     <string name="remover">Remover</string>
     <string name="removido_com_sucesso">Convidado removido com sucesso.</string>
     <string name="total">Total</string>
+    <string name="agfnome">Nome</string>
+    <string name="adfconfirmação">Confirmação</string>
+    <string name="adfpresent">Presente</string>
+    <string name="adfabsent">Ausente</string>
+    <string name="adfsave">SALVAR</string>
+
 </resources>
